--- a/src/component/hero/hero.css
+++ b/src/component/hero/hero.css
@@ -19,8 +19,7 @@
 nav {
   padding: 1.175rem 1.5rem 0px;
 }
-.inner-nav-container{
-  max-width: 1080px;
+.inner-nav-container {
   display: flex;
   margin: auto;
   justify-content: space-between;
@@ -98,7 +97,7 @@ nav button {
   .hero-main {
     width: 90vw;
 
-    margin-top: 5.4rem;
+    margin-top: 10vh;
   }
 
   .hero-main h1 {
@@ -129,7 +128,7 @@ nav button {
   }
   /* hero container*/
   .hero-container {
-    height: 46.7rem;
+    height: 74vh;
     background-position: 52.5% 100%;
     background-size: 80rem;
   }
@@ -137,7 +136,7 @@ nav button {
 
   .hero-main {
     width: 90vw;
-    margin-top: 9rem;
+    margin-top: 15vh;
   }
 
   .hero-main h1 {
@@ -169,7 +168,6 @@ nav button {
   /* hero main section */
   .hero-main {
     width: 80vw;
-    margin-top: 9.5rem;
   }
 
   .hero-main p:first-of-type {
@@ -194,17 +192,26 @@ nav button {
   }
 }
 
-@media (min-width: 949px) {
+@media (min-width: 950px) {
+  /* nav */
+  nav svg {
+    width: 8rem;
+  }
+
+  nav button {
+    padding: 0.5rem 1rem;
+  }
+
   /* hero container*/
   .hero-container {
-    height: 66vh;
+    height: 66.5vh;
     background-position: 55.1% 50%;
     background-size: cover;
   }
   /* hero main section */
   .hero-main {
-    width: 72vw;
-    margin-top: 11rem;
+    max-width: 72vw;
+    margin-top: 17vh;
   }
 
   .hero-main p:last-of-type {
@@ -220,13 +227,23 @@ nav button {
   .hero-main button {
     display: inline-block;
     padding: 0.6rem 1rem 1.1rem 1rem;
-
     font-size: 26px;
     align-items: center;
   }
 }
 /* width of 950 and up */
 @media (min-width: 1450px) {
+  nav button {
+    padding: 0rem 2rem;
+  }
+  nav {
+    max-width: 1940px;
+    margin: auto;
+  }
+  nav svg {
+    width: 10rem;
+    height: auto;
+  }
   /* hero container*/
   .hero-container {
     height: 72vh;
@@ -238,8 +255,8 @@ nav button {
     width: 72vw;
     margin-top: 11rem;
   }
-  .hero-header{
-    font-size: 3.125rem;
+  .hero-main h1 {
+    font-size: 4rem;
   }
 
   .hero-main p:last-of-type {
@@ -248,14 +265,13 @@ nav button {
   }
   .hero-main input {
     width: 70%;
-    height: 3.565rem;
+    height: 4rem;
     padding: 0px;
     margin-top: 17px;
   }
   .hero-main button {
     display: inline-block;
-    padding: 0.6rem 1rem 1.1rem 1rem;
-
+    padding: 0.76rem 1rem 1.4rem 1rem;
     font-size: 26px;
     align-items: center;
   }
